# netiq-idm-rest-client

./: .gitignore  Creacion-Roles.ipynb  Ejemplo de llamados.ipynb  README.md  config.ini  idm.py  idmsrv.crt  idmsrv_ca.crt  my-test.ipynb  pyproject.toml
idm/: README.md  pyproject.toml  requirements.txt
idm/src/cnetiq_idm_client/: __init__.py
