[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnetiq_idm_client"
version = "0.0.1.4"
authors = [
  { name="Gabriel Labarrera", email="gabriel.labarrera.vega@gmail.com" },
]
description = "Cliente parra los llamados de los servicios rest de NetIQ IDM"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]