[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "cnetiq_idm_client"
version = "0.0.3.0"
authors = [
  { name="Gabriel Labarrera", email="gabriel.labarrera.vega@gmail.com" },
]
description = "Cliente parra los llamados de los servicios rest de NetIQ IDM"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]